# FloraServer

./: FloraServer.py  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: TestPyPIPublish.yml  dev.yml  publish-test.yml  publish.yml
src/floraserver/: FloraServer.py  __init__.py
