[project]
name = "FloraServer"
version = "0.1.0"
description = "A modified websocket-server that supports communication on the same port as flask"
authors = [
    {name = "AEBC08", email = "125038182+AEBC08@users.noreply.github.com"},
]
dependencies = ["flask>=3.0.3", "websocket-server>=0.6.4"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
