[project]
name = "FloraServer"
dynamic = ["version"]
description = "A modified websocket-server that supports communication on the same port as flask"
authors = [
    {name = "AEBC08", email = "AEBC09@qq.com"},
]
dependencies = ["flask>=3.0.3", "websocket-server>=0.6.4"]
requires-python = ">=3.8"
readme = "README_EN.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = {source = "file", path = "src/floraserver/__init__.py"}
